add a js folder and link all js

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -58,26 +58,9 @@
         <a href="contact.html">Contact</a>
       </div>
     </div>
-    <script>
-      function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-          x.className += " responsive";
-        } else {
-          x.className = "topnav";
-        }
-      }
-    </script>
+   <script src="js/myTopnav.js"></script>
 
-    <script>
-      function openNav() {
-        document.getElementById("myNav").style.width = "100%";
-      }
-
-      function closeNav() {
-        document.getElementById("myNav").style.width = "0%";
-      }
-    </script>
+<script src="js/myNav.js"></script>
     <div class="container2">
       <h2 id="heading">What I Learn This Sem</h2>
       <div class="bigbox1">
@@ -117,7 +100,7 @@
         <div class="box2">
           <h5>Artificial Intelligence</h5>
           <p id="artificial">
-            Artificial intelligence is the<br />
+            Artificial intelligence is the
             simulation of human intelligence processes by machines, especially
             computer systems
           </p>
