--- a/assignment/contact.html
+++ b/assignment/contact.html
@@ -51,26 +51,9 @@
         <a href="contact.html">Contact</a>
       </div>
     </div>
-    <script>
-      function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-          x.className += " responsive";
-        } else {
-          x.className = "topnav";
-        }
-      }
-    </script>
+    <script src="js/myTopnav.js"></script>
 
-    <script>
-      function openNav() {
-        document.getElementById("myNav").style.width = "100%";
-      }
-
-      function closeNav() {
-        document.getElementById("myNav").style.width = "0%";
-      }
-    </script>
+    <script src="js/myNav.js"></script>
     <div class="container2">
       <div class="contactbox">
         <h3>Contact Information</h3>
