--- a/week4/homework4.html
+++ b/week4/homework4.html
@@ -28,7 +28,7 @@
         </p>
       </div>
       <div id="example2">
-        <img src="img/couplegreenwhite4.jpg" width="450px" />
+        <img src="img/couplegreenwhite4.jpg" width="100%" />
       </div>
     </div>
   </body>
