structure all html

--- a/assignment/contact.html
+++ b/assignment/contact.html
@@ -70,7 +70,7 @@
           </div>
           <div class="textsidebar">
             <p>019-9486867</p>
-            <p>chowkuiheng1018@e.newera.edu.my</p>
+            <p>kuiheng1018@gmail.com</p>
             <p>A20, KAMPUNG PULAI 18300 GUA MUSANG KELANTAN</p>
           </div>
         </div>
@@ -492,7 +492,7 @@
           <a href="https://www.instagram.com/jackiechow6867/" target="_new"
             ><img src="img/instagram.png" width="35px"
           /></a>
-          <a href="mailto:chowkuiheng1018@e.newera.edu.my" target="_new"
+          <a href="mailto:kuiheng1018@gmail.com" target="_new"
             ><img src="img/gmail.png" width="35px"
           /></a>
         </div>
