--- a/assignment/mywork.html
+++ b/assignment/mywork.html
@@ -3,6 +3,7 @@
   <head>
     <title>My Work</title>
     <link rel="stylesheet" type="text/css" href="cssfile/mywork.css" />
+    <link rel="stylesheet" type="text/css" href="cssfile/header.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
