structure index html

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -43,7 +43,7 @@
         <div class="sidebar">
           <a href="https://www.facebook.com/kuihengchow/" target="_new"><img src="img/facebooklogo.png" width="35px" /></a>
           <a href="https://www.instagram.com/jackiechow6867/" target="_new"><img src="img/instagram.png" width="35px" /></a>
-          <a href="mailto:chowkuiheng1018@e.newera.edu.my" target="_new"><img src="img/gmail.png" width="35px" /></a>
+          <a href="mailto:kuiheng1018@gmail.com" target="_new"><img src="img/gmail.png" width="35px" /></a>
         </div>
       </div>
     </div>
