delete picture in aboutme html and structure it

--- a/assignment/aboutme.html
+++ b/assignment/aboutme.html
@@ -119,13 +119,13 @@
       <div class="guabox">
         <img
           class="melawi"
-          src="img/melawibeach.jpg"
+          src="img/melawibeach.png"
           width="30%"
           height="49%"
         />
         <img
           class="kualakoh"
-          src="img/kualakohnationalpark.jpg"
+          src="img/kualakohnationalpark.png"
           width="25%"
           height="59%"
         />
