structure aboutme html

--- a/assignment/aboutme.html
+++ b/assignment/aboutme.html
@@ -166,7 +166,7 @@
             <p>
               Name: New Era University College<br />
               <br />
-              Address: Kolej Universiti New Era, Lot 5,<br />
+              Address: Kolej Universiti New Era, Lot 5,
               Seksyen 10, Jalan Bukit 43000 Kajang Selangor <br />
               <br />
               Phone: 6039732770 <br />
