structure exercise 1 week 12

--- a/week12/exercise1.html
+++ b/week12/exercise1.html
@@ -103,46 +103,45 @@
       </div>
     </div>
     <div class="row m-5 text-center">
-      <div class="card col" style="width: 18rem">
+      <div class="card col m-3" style="width: 18rem">
         <img src="img/chateau-de-chenonceau.jpg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">Château de Chenonceau</h5>
         </div>
       </div>
-      <div class="card col" style="width: 18rem">
+      <div class="card col m-3" style="width: 18rem">
         <img src="img/eiffel-tower.jpg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">Eiffel Tower</h5>
         </div>
       </div>
-      <div class="card col" style="width: 18rem">
+      <div class="card col m-3" style="width: 18rem">
         <img src="img/mont-st-michel.jpg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">Mont Saint-Michel</h5>
         </div>
       </div>
-      <div class="card col" style="width: 18rem">
+      <div class="card col m-3" style="width: 18rem">
         <img src="img/versailles-gardens.jpg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">Versailles Gardens</h5>
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row p-3 text-center bg-light">
-        <div class="col">
-          <img src="img/addidas.png" alt="" width="25%" />
-        </div>
-        <div class="col">
-          <p>019-948 6867</p>
-          <p>chowkuiheng1018@e.newera.edu.my</p>
-          <p>A20, KAMPUNG PULAI 18300 GUA MUSANG KELANTAN</p>
-        </div>
-        <div class="col">
-          <img src="img/facebooklogo.png" width="25px" />
-          <img src="img/instagram.png" width="25px" />
-          <img src="img/gmail.png" width="27px" />
-        </div>
+
+    <div class="row p-3 text-center bg-light">
+      <div class="col">
+        <img src="img/addidas.png" alt="" width="25%" />
+      </div>
+      <div class="col">
+        <p>019-948 6867</p>
+        <p>chowkuiheng1018@e.newera.edu.my</p>
+        <p>A20, KAMPUNG PULAI 18300 GUA MUSANG KELANTAN</p>
+      </div>
+      <div class="col">
+        <img src="img/facebooklogo.png" width="25px" />
+        <img src="img/instagram.png" width="25px" />
+        <img src="img/gmail.png" width="27px" />
       </div>
     </div>
   </body>
