--- a/week12/exercise1.html
+++ b/week12/exercise1.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
+    <div class="container">
     <nav class="navbar navbar-expand-lg bg-light">
       <nav class="navbar bg-light">
         <div class="container">
@@ -65,7 +66,9 @@
         </div>
       </div>
     </nav>
-    <div>
+    </div>
+    
+      <div class="container">
       <div
         id="carouselExampleControls"
         class="carousel slide"
@@ -102,33 +105,43 @@
         </button>
       </div>
     </div>
+    <div class="container">
     <div class="row m-5 text-center">
       <div class="card col m-3" style="width: 18rem">
-        <img src="img/chateau-de-chenonceau.jpg" class="card-img-top" />
+        <img src="img/saint-tropez.jpg" class="card-img-top" />
         <div class="card-body">
-          <h5 class="card-title">Château de Chenonceau</h5>
+          <h5 class="card-title">Saint-Tropez</h5>
+          <p class="card-text">This is Saint-Tropez</p>
+          <a href="#" class="btn btn-primary">Details</a>
         </div>
       </div>
       <div class="card col m-3" style="width: 18rem">
         <img src="img/eiffel-tower.jpg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">Eiffel Tower</h5>
+          <p class="card-text">This is Eiffel Tower</p>
+          <a href="#" class="btn btn-primary">Details</a>
         </div>
       </div>
       <div class="card col m-3" style="width: 18rem">
         <img src="img/mont-st-michel.jpg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">Mont Saint-Michel</h5>
+          <p class="card-text">This is Mont Saint-Michel</p>
+          <a href="#" class="btn btn-primary">Details</a>
         </div>
       </div>
       <div class="card col m-3" style="width: 18rem">
         <img src="img/versailles-gardens.jpg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">Versailles Gardens</h5>
+          <p class="card-text">This is Versailles Gardens</p>
+          <a href="#" class="btn btn-primary">Details</a>
         </div>
       </div>
     </div>
-
+</div>
+<div class="container">
     <div class="row p-3 text-center bg-light">
       <div class="col">
         <img src="img/addidas.png" alt="" width="25%" />
@@ -144,6 +157,7 @@
         <img src="img/gmail.png" width="27px" />
       </div>
     </div>
+</div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
