--- a/week12/exercise1.html
+++ b/week12/exercise1.html
@@ -13,62 +13,66 @@
   </head>
   <body>
     <div class="container">
-    <nav class="navbar navbar-expand-lg bg-light">
-      <nav class="navbar bg-light">
+      <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="img/addidas.png" alt="Bootstrap" width="50" height="50" />
+            <img
+              src="img/addidas.png"
+              alt="Logo"
+              width="55"
+              height="50"
+              class="d-inline-block align-text-top"
+            />
           </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  About
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Our CEO</a></li>
+                  <li><a class="dropdown-item" href="#">Our team</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                About
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Our CEO</a></li>
-                <li><a class="dropdown-item" href="#">Our Team</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Products</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    </div>
-    
-      <div class="container">
+
       <div
         id="carouselExampleControls"
         class="carousel slide"
@@ -104,60 +108,58 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+
+      <div class="row m-5 text-center">
+        <div class="card col m-3">
+          <img src="img/saint-tropez.jpg" class="card-img-top" />
+          <div class="card-body">
+            <h5 class="card-title">Saint-Tropez</h5>
+            <p class="card-text">This is Saint-Tropez</p>
+            <a href="#" class="btn btn-primary">Details</a>
+          </div>
+        </div>
+        <div class="card col m-3">
+          <img src="img/eiffel-tower.jpg" class="card-img-top" />
+          <div class="card-body">
+            <h5 class="card-title">Eiffel Tower</h5>
+            <p class="card-text">This is Eiffel Tower</p>
+            <a href="#" class="btn btn-primary">Details</a>
+          </div>
+        </div>
+        <div class="card col m-3">
+          <img src="img/mont-st-michel.jpg" class="card-img-top" />
+          <div class="card-body">
+            <h5 class="card-title">Mont Saint-Michel</h5>
+            <p class="card-text">This is Mont Saint-Michel</p>
+            <a href="#" class="btn btn-primary">Details</a>
+          </div>
+        </div>
+        <div class="card col m-3">
+          <img src="img/versailles-gardens.jpg" class="card-img-top" />
+          <div class="card-body">
+            <h5 class="card-title">Versailles Gardens</h5>
+            <p class="card-text">This is Versailles Gardens</p>
+            <a href="#" class="btn btn-primary">Details</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row p-3 text-center bg-light">
+        <div class="col">
+          <img src="img/addidas.png" alt="" width="25%" />
+        </div>
+        <div class="col">
+          <p>019-948 6867</p>
+          <p>chowkuiheng1018@e.newera.edu.my</p>
+          <p>A20, KAMPUNG PULAI 18300 GUA MUSANG KELANTAN</p>
+        </div>
+        <div class="col">
+          <img src="img/facebooklogo.png" width="25px" />
+          <img src="img/instagram.png" width="25px" />
+          <img src="img/gmail.png" width="27px" />
+        </div>
+      </div>
     </div>
-    <div class="container">
-    <div class="row m-5 text-center">
-      <div class="card col m-3" style="width: 18rem">
-        <img src="img/saint-tropez.jpg" class="card-img-top" />
-        <div class="card-body">
-          <h5 class="card-title">Saint-Tropez</h5>
-          <p class="card-text">This is Saint-Tropez</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-      <div class="card col m-3" style="width: 18rem">
-        <img src="img/eiffel-tower.jpg" class="card-img-top" />
-        <div class="card-body">
-          <h5 class="card-title">Eiffel Tower</h5>
-          <p class="card-text">This is Eiffel Tower</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-      <div class="card col m-3" style="width: 18rem">
-        <img src="img/mont-st-michel.jpg" class="card-img-top" />
-        <div class="card-body">
-          <h5 class="card-title">Mont Saint-Michel</h5>
-          <p class="card-text">This is Mont Saint-Michel</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-      <div class="card col m-3" style="width: 18rem">
-        <img src="img/versailles-gardens.jpg" class="card-img-top" />
-        <div class="card-body">
-          <h5 class="card-title">Versailles Gardens</h5>
-          <p class="card-text">This is Versailles Gardens</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row p-3 text-center bg-light">
-      <div class="col">
-        <img src="img/addidas.png" alt="" width="25%" />
-      </div>
-      <div class="col">
-        <p>019-948 6867</p>
-        <p>chowkuiheng1018@e.newera.edu.my</p>
-        <p>A20, KAMPUNG PULAI 18300 GUA MUSANG KELANTAN</p>
-      </div>
-      <div class="col">
-        <img src="img/facebooklogo.png" width="25px" />
-        <img src="img/instagram.png" width="25px" />
-        <img src="img/gmail.png" width="27px" />
-      </div>
-    </div>
-</div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
