--- a/index.html
+++ b/index.html
@@ -197,6 +197,15 @@
                 <li>Exercise3</li>
               </a>
             </ul>
+            <h2>Homework Week12</h2>
+            <ul>
+              <a
+                href="https://chowkuiheng.github.io/week12/exercise1.html"
+                target="__exercise1"
+              >
+                <li>Exercise1</li>
+              </a>
+            </ul>
             <h2>Individual Assignment</h2>
             <ul>
               <a
