--- a/assignment/mywork.html
+++ b/assignment/mywork.html
@@ -19,10 +19,10 @@
   <body>
     <div class="header">
       <div class="logo">
-        <img src="img/kuihenglogo.png" alt="" width="70px" height="70px" />
+        <a href="index.html"><img src="img/kuihenglogo.png" alt="" width="70px" height="70px" /></a>
       </div>
       <div class="topnav" id="myTopnav">
-        <a href="https://chowkuiheng.github.io/assignment/" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html" >My Work</a>
         <a href="myfavourite.html">My Favourite</a>
@@ -45,7 +45,7 @@
         >&times;</a
       >
       <div class="overlay-content">
-        <a href="https://chowkuiheng.github.io/assignment/" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html" >My Work</a>
         <a href="myfavourite.html">My Favourite</a>
@@ -129,7 +129,7 @@
     </div>
     <div class="container6">
       <div class="footer">
-        <a href="https://chowkuiheng.github.io/assignment/" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="aboutme.html" >About Me</a>
         <a href="mywork.html" >My Work</a>
         <a href="myfavourite.html">My Favourite</a>
