--- a/assignment/aboutme.html
+++ b/assignment/aboutme.html
@@ -19,12 +19,14 @@
   <body>
     <div class="header">
       <div class="logo">
-        <a href="index.html"><img src="img/kuihenglogo.png" alt="" width="70px" height="70px" /></a>
+        <a href="index.html"
+          ><img src="img/kuihenglogo.png" alt="" width="70px" height="70px"
+        /></a>
       </div>
       <div class="topnav" id="myTopnav">
         <a href="index.html" class="active">Home</a>
-        <a href="aboutme.html" >About Me</a>
-        <a href="mywork.html" >My Work</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
         <a href="contact.html">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
@@ -51,8 +53,8 @@
       >
       <div class="overlay-content">
         <a href="index.html" class="active">Home</a>
-        <a href="aboutme.html" >About Me</a>
-        <a href="mywork.html" >My Work</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
         <a href="contact.html">Contact</a>
       </div>
@@ -101,7 +103,8 @@
           <h5>Laksam</h5>
           <img src="img/laksam.jpg" width="65%" />
           <p>
-            Laksam Laksei (Laksang) is a type of common dish from Kelantan. It is made from rice flour and eaten with gravy
+            Laksam Laksei (Laksang) is a type of common dish from Kelantan. It
+            is made from rice flour and eaten with gravy
           </p>
         </div>
         <div class="box2">
@@ -166,8 +169,8 @@
             <p>
               Name: New Era University College<br />
               <br />
-              Address: Kolej Universiti New Era, Lot 5,
-              Seksyen 10, Jalan Bukit 43000 Kajang Selangor <br />
+              Address: Kolej Universiti New Era, Lot 5, Seksyen 10, Jalan Bukit
+              43000 Kajang Selangor <br />
               <br />
               Phone: 6039732770 <br />
               <br />
@@ -184,16 +187,22 @@
         <h4>Get in touch</h4>
         <a class="contact" href="contact.html">Contact</a>
         <div class="sidebar1">
-          <a href="https://www.facebook.com/kuihengchow/" target="_new"><img src="img/facebooklogo.png" width="35px" /></a>
-          <a href="https://www.instagram.com/jackiechow6867/" target="_new"><img src="img/instagram.png" width="35px" /></a>
-          <a href="mailto:kuiheng1018@gmail.com" target="_new"><img src="img/gmail.png" width="35px" /></a>
+          <a href="https://www.facebook.com/kuihengchow/" target="_new"
+            ><img src="img/facebooklogo.png" width="35px"
+          /></a>
+          <a href="https://www.instagram.com/jackiechow6867/" target="_new"
+            ><img src="img/instagram.png" width="35px"
+          /></a>
+          <a href="mailto:kuiheng1018@gmail.com" target="_new"
+            ><img src="img/gmail.png" width="35px"
+          /></a>
         </div>
       </div>
     </div>
     <div class="container7">
       <div class="footer">
         <a href="index.html">Home</a>
-        <a href="aboutme.html" >About Me</a>
+        <a href="aboutme.html">About Me</a>
         <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
         <a href="contact.html">Contact</a>
