--- a/assignment/index.html
+++ b/assignment/index.html
@@ -19,12 +19,14 @@
   <body>
     <div class="header">
       <div class="logo">
-        <a href="index.html"><img src="img/kuihenglogo.png" alt="" width="70px" height="70px" /></a>
+        <a href="index.html"
+          ><img src="img/kuihenglogo.png" alt="" width="70px" height="70px"
+        /></a>
       </div>
       <div class="topnav" id="myTopnav">
         <a href="index.html" class="active">Home</a>
-        <a href="aboutme.html" >About Me</a>
-        <a href="mywork.html" >My Work</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
         <a href="contact.html">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
@@ -41,9 +43,15 @@
         </div>
 
         <div class="sidebar">
-          <a href="https://www.facebook.com/kuihengchow/" target="_new"><img src="img/facebooklogo.png" width="35px" /></a>
-          <a href="https://www.instagram.com/jackiechow6867/" target="_new"><img src="img/instagram.png" width="35px" /></a>
-          <a href="mailto:kuiheng1018@gmail.com" target="_new"><img src="img/gmail.png" width="35px" /></a>
+          <a href="https://www.facebook.com/kuihengchow/" target="_new"
+            ><img src="img/facebooklogo.png" width="35px"
+          /></a>
+          <a href="https://www.instagram.com/jackiechow6867/" target="_new"
+            ><img src="img/instagram.png" width="35px"
+          /></a>
+          <a href="mailto:kuiheng1018@gmail.com" target="_new"
+            ><img src="img/gmail.png" width="35px"
+          /></a>
         </div>
       </div>
     </div>
@@ -59,9 +67,9 @@
         <a href="contact.html">Contact</a>
       </div>
     </div>
-   <script src="js/myTopnav.js"></script>
+    <script src="js/myTopnav.js"></script>
 
-<script src="js/myNav.js"></script>
+    <script src="js/myNav.js"></script>
     <div class="container2">
       <h2 id="heading">What I Learn This Sem</h2>
       <div class="bigbox1">
@@ -73,7 +81,12 @@
             devices
           </p>
           <div class="btndetails0">
-            <a class="details" href="https://en.wikipedia.org/wiki/Mobile_app_development" target="_new">DETAILS</a>
+            <a
+              class="details"
+              href="https://en.wikipedia.org/wiki/Mobile_app_development"
+              target="_new"
+              >DETAILS</a
+            >
           </div>
         </div>
         <div class="box1">
@@ -83,7 +96,12 @@
             the internet
           </p>
           <div class="btndetails1">
-            <a class="details" href="https://en.wikipedia.org/wiki/Web_design" target="_new">DETAILS</a>
+            <a
+              class="details"
+              href="https://en.wikipedia.org/wiki/Web_design"
+              target="_new"
+              >DETAILS</a
+            >
           </div>
         </div>
         <div class="box1">
@@ -93,7 +111,12 @@
             stand-alone either in a client or a server
           </p>
           <div class="btndetails2">
-            <a class="details" href="https://en.wikipedia.org/wiki/Java_(programming_language)" target="_new">DETAILS</a>
+            <a
+              class="details"
+              href="https://en.wikipedia.org/wiki/Java_(programming_language)"
+              target="_new"
+              >DETAILS</a
+            >
           </div>
         </div>
       </div>
@@ -101,12 +124,16 @@
         <div class="box2">
           <h5>Artificial Intelligence</h5>
           <p id="artificial">
-            Artificial intelligence is the
-            simulation of human intelligence processes by machines, especially
-            computer systems
+            Artificial intelligence is the simulation of human intelligence
+            processes by machines, especially computer systems
           </p>
           <div class="btndetails3">
-            <a class="details" href="https://en.wikipedia.org/wiki/Artificial_intelligence" target="_new">DETAILS</a>
+            <a
+              class="details"
+              href="https://en.wikipedia.org/wiki/Artificial_intelligence"
+              target="_new"
+              >DETAILS</a
+            >
           </div>
         </div>
         <div class="box2">
@@ -116,7 +143,12 @@
             people for the community
           </p>
           <div class="btndetails4">
-            <a class="details" href="https://en.wikipedia.org/wiki/Community_service" target="_new">DETAILS</a>
+            <a
+              class="details"
+              href="https://en.wikipedia.org/wiki/Community_service"
+              target="_new"
+              >DETAILS</a
+            >
           </div>
         </div>
         <div class="box2">
@@ -126,7 +158,12 @@
             working, structuring and implementation of a computer system
           </p>
           <div class="btndetails5">
-            <a class="details" href="https://en.wikipedia.org/wiki/Computer_architecture" target="_new">DETAILS</a>
+            <a
+              class="details"
+              href="https://en.wikipedia.org/wiki/Computer_architecture"
+              target="_new"
+              >DETAILS</a
+            >
           </div>
         </div>
       </div>
@@ -213,16 +250,22 @@
         <h4>Get in touch</h4>
         <a class="contact" href="contact.html">Contact</a>
         <div class="sidebar1">
-          <a href="https://www.facebook.com/kuihengchow/" target="_new"><img src="img/facebooklogo.png" width="35px" /></a>
-          <a href="https://www.instagram.com/jackiechow6867/" target="_new"><img src="img/instagram.png" width="35px" /></a>
-          <a href="mailto:kuiheng1018@gmail.com" target="_new"><img src="img/gmail.png" width="35px" /></a>
+          <a href="https://www.facebook.com/kuihengchow/" target="_new"
+            ><img src="img/facebooklogo.png" width="35px"
+          /></a>
+          <a href="https://www.instagram.com/jackiechow6867/" target="_new"
+            ><img src="img/instagram.png" width="35px"
+          /></a>
+          <a href="mailto:kuiheng1018@gmail.com" target="_new"
+            ><img src="img/gmail.png" width="35px"
+          /></a>
         </div>
       </div>
     </div>
     <div class="container7">
       <div class="footer">
         <a href="index.html">Home</a>
-        <a href="aboutme.html" >About Me</a>
+        <a href="aboutme.html">About Me</a>
         <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
         <a href="contact.html">Contact</a>
