--- a/assignment/myfavourite.html
+++ b/assignment/myfavourite.html
@@ -19,11 +19,13 @@
   <body>
     <div class="header">
       <div class="logo">
-        <a href="index.html"><img src="img/kuihenglogo.png" alt="" width="70px" height="70px" /></a>
+        <a href="index.html"
+          ><img src="img/kuihenglogo.png" alt="" width="70px" height="70px"
+        /></a>
       </div>
       <div class="topnav" id="myTopnav">
         <a href="index.html" class="active">Home</a>
-        <a href="aboutme.html" >About Me</a>
+        <a href="aboutme.html">About Me</a>
         <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
         <a href="contact.html">Contact</a>
@@ -48,7 +50,7 @@
       >
       <div class="overlay-content">
         <a href="index.html">Home</a>
-        <a href="aboutme.html" >About Me</a>
+        <a href="aboutme.html">About Me</a>
         <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
         <a href="contact.html">Contact</a>
@@ -100,11 +102,11 @@
         <img src="img/felikszemdegs2.jpg" width="25%" />
         <p>
           Career higlights and awards
-          <br><br>
-       
+          <br /><br />
+
           He is the first speedcuber to have won the World Cube Association
           World Championship twice, in 2013 and 2015
-     <br><br>
+          <br /><br />
           He is widely regarded as the most successful and finest speedcuber of
           all time
         </p>
@@ -115,9 +117,15 @@
         <h4>Get in touch</h4>
         <a class="contact" href="contact.html">Contact</a>
         <div class="sidebar1">
-          <a href="https://www.facebook.com/kuihengchow/" target="_new"><img src="img/facebooklogo.png" width="35px" /></a>
-          <a href="https://www.instagram.com/jackiechow6867/" target="_new"><img src="img/instagram.png" width="35px" /></a>
-          <a href="mailto:kuiheng1018@gmail.com" target="_new"><img src="img/gmail.png" width="35px" /></a>
+          <a href="https://www.facebook.com/kuihengchow/" target="_new"
+            ><img src="img/facebooklogo.png" width="35px"
+          /></a>
+          <a href="https://www.instagram.com/jackiechow6867/" target="_new"
+            ><img src="img/instagram.png" width="35px"
+          /></a>
+          <a href="mailto:kuiheng1018@gmail.com" target="_new"
+            ><img src="img/gmail.png" width="35px"
+          /></a>
         </div>
       </div>
     </div>
