--- a/assignment/mywork.html
+++ b/assignment/mywork.html
@@ -19,12 +19,14 @@
   <body>
     <div class="header">
       <div class="logo">
-        <a href="index.html"><img src="img/kuihenglogo.png" alt="" width="70px" height="70px" /></a>
+        <a href="index.html"
+          ><img src="img/kuihenglogo.png" alt="" width="70px" height="70px"
+        /></a>
       </div>
       <div class="topnav" id="myTopnav">
         <a href="index.html" class="active">Home</a>
-        <a href="aboutme.html" >About Me</a>
-        <a href="mywork.html" >My Work</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
         <a href="contact.html">Contact</a>
         <a class="icon" onclick="openNav()">&#9776; </a>
@@ -34,7 +36,9 @@
       <div class="text1">
         <h3>My Work</h3>
         <div class="gitlogo"><img src="img/githublogo.png" width="10%" /></div>
-        <div class="github"><a href="https://chowkuiheng.github.io/">MyGithub</a></div>
+        <div class="github">
+          <a href="https://chowkuiheng.github.io/">MyGithub</a>
+        </div>
         <div class="word">
           Click on "MyGithub" to see all my web design work
         </div>
@@ -46,8 +50,8 @@
       >
       <div class="overlay-content">
         <a href="index.html" class="active">Home</a>
-        <a href="aboutme.html" >About Me</a>
-        <a href="mywork.html" >My Work</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
         <a href="contact.html">Contact</a>
       </div>
@@ -63,7 +67,11 @@
             <div class="picture">
               <img src="img/homework.jpg" width="90%" />
             </div>
-            <a class="details" href="https://chowkuiheng.github.io/week4/homework1.html">SEE MORE</a>
+            <a
+              class="details"
+              href="https://chowkuiheng.github.io/week4/homework1.html"
+              >SEE MORE</a
+            >
           </div>
         </div>
         <div class="box1">
@@ -71,7 +79,11 @@
             <div class="picture">
               <img src="img/homework1.jpg" width="90%" />
             </div>
-            <a class="details" href="https://chowkuiheng.github.io/week4/homework2.html">SEE MORE</a>
+            <a
+              class="details"
+              href="https://chowkuiheng.github.io/week4/homework2.html"
+              >SEE MORE</a
+            >
           </div>
         </div>
         <div class="box1">
@@ -79,7 +91,11 @@
             <div class="picture">
               <img src="img/homework2.jpg" width="90%" />
             </div>
-            <a class="details" href="https://chowkuiheng.github.io/week4/homework3.html">SEE MORE</a>
+            <a
+              class="details"
+              href="https://chowkuiheng.github.io/week4/homework3.html"
+              >SEE MORE</a
+            >
           </div>
         </div>
       </div>
@@ -89,7 +105,11 @@
             <div class="picture">
               <img src="img/homework3.jpg" width="90%" />
             </div>
-            <a class="details" href="https://chowkuiheng.github.io/week4/homework4.html">SEE MORE</a>
+            <a
+              class="details"
+              href="https://chowkuiheng.github.io/week4/homework4.html"
+              >SEE MORE</a
+            >
           </div>
         </div>
         <div class="box2">
@@ -97,7 +117,11 @@
             <div class="picture">
               <img src="img/homework4.jpg" width="90%" />
             </div>
-            <a class="details" href="https://chowkuiheng.github.io/week4/homework5.html">SEE MORE</a>
+            <a
+              class="details"
+              href="https://chowkuiheng.github.io/week4/homework5.html"
+              >SEE MORE</a
+            >
           </div>
         </div>
         <div class="box2">
@@ -105,7 +129,11 @@
             <div class="picture">
               <img src="img/homework5.jpg" width="90%" />
             </div>
-            <a class="details" href="https://chowkuiheng.github.io/week6/exercise1.html">SEE MORE</a>
+            <a
+              class="details"
+              href="https://chowkuiheng.github.io/week6/exercise1.html"
+              >SEE MORE</a
+            >
           </div>
         </div>
       </div>
@@ -113,7 +141,11 @@
     <div class="container3">
       <div class="workbox">
         <img src="img/homework6.jpg" width="25%" />
-        <div class="button"><a href="https://chowkuiheng.github.io/week6/homework1.html">SEE MORE</a></div>
+        <div class="button">
+          <a href="https://chowkuiheng.github.io/week6/homework1.html"
+            >SEE MORE</a
+          >
+        </div>
       </div>
     </div>
     <div class="container4">
@@ -121,17 +153,23 @@
         <h4>Get in touch</h4>
         <a class="contact" href="contact.html">Contact</a>
         <div class="sidebar1">
-          <a href="https://www.facebook.com/kuihengchow/" target="_new"><img src="img/facebooklogo.png" width="35px" /></a>
-          <a href="https://www.instagram.com/jackiechow6867/" target="_new"><img src="img/instagram.png" width="35px" /></a>
-          <a href="mailto:kuiheng1018@gmail.com" target="_new"><img src="img/gmail.png" width="35px" /></a>
+          <a href="https://www.facebook.com/kuihengchow/" target="_new"
+            ><img src="img/facebooklogo.png" width="35px"
+          /></a>
+          <a href="https://www.instagram.com/jackiechow6867/" target="_new"
+            ><img src="img/instagram.png" width="35px"
+          /></a>
+          <a href="mailto:kuiheng1018@gmail.com" target="_new"
+            ><img src="img/gmail.png" width="35px"
+          /></a>
         </div>
       </div>
     </div>
     <div class="container6">
       <div class="footer">
         <a href="index.html" class="active">Home</a>
-        <a href="aboutme.html" >About Me</a>
-        <a href="mywork.html" >My Work</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
         <a href="contact.html">Contact</a>
       </div>
