--- a/assignment/contact.html
+++ b/assignment/contact.html
@@ -19,12 +19,12 @@
   <body>
     <div class="header">
       <div class="logo">
-        <a href="index.html"><img src="img/kuihenglogo.png" alt="" width="70px" height="70px" /></a>
+        <a href="index.html"
+          ><img src="img/kuihenglogo.png" alt="" width="70px" height="70px"
+        /></a>
       </div>
       <div class="topnav" id="myTopnav">
-        <a href="index.html" class="active"
-          >Home</a
-        >
+        <a href="index.html" class="active">Home</a>
         <a href="aboutme.html">About Me</a>
         <a href="mywork.html">My Work</a>
         <a href="myfavourite.html">My Favourite</a>
